# agentguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: agentguard.yml
agentguard/: __init__.py  _meta.py  audit.py  changed.py  cli.py  demo.py  discovery.py  doctor.py  gate.py  mcp_stdio.py  models.py  policy.py  policy_packs.py  render.py  risk.py  secrets.py
docs/: DEMO.md  RELEASE.md  ROADMAP.md
examples/: dangerous_mcp_config.json  demo_tool_calls.jsonl  mcp_config.json  policy.yaml  policy_with_exception.yaml  safe_mcp_config.json
tests/: test_audit.py  test_changed.py  test_cli_approvals.py  test_cli_audit_chain.py  test_cli_gate.py  test_cli_init.py  test_demo.py  test_demo_examples.py  test_discovery.py  test_doctor.py  test_entrypoints.py  test_findings_report.py  test_gate.py  test_mcp_real_server_smoke.py  test_mcp_stdio.py  test_policy.py  test_policy_packs.py  test_release_readiness.py  test_secrets.py
tests/fixtures/: fake_mcp_server.py
